hardcoded locations and changed icons on about page

--- a/about.html
+++ b/about.html
@@ -94,33 +94,29 @@
 
                 <div class = "facts-row">
                     <div class = "facts-item">
-                        <span class = "fas fa-camera-retro facts-icon"></span>
+                        <span class = "fas fa-stamp facts-icon"></span>
                         <div class = "facts-info">
-                            <strong>1220</strong>
                             <p class = "text">This app is not approved by the GPRTU yet</p>
                         </div>
                     </div>
 
                     <div class = "facts-item">
-                        <span class = "fas fa-umbrella-beach  facts-icon"></span>
+                        <span class = "fas fa-handshake  facts-icon"></span>
                         <div class = "facts-info">
-                            <strong>450</strong>
-                            <p class = "text">The fares displayed may not be the exact fares</p>
+                            <p class = "text">The fares displayed may not be accepted by all. However, they have been carefully sourced.</p>
                         </div>
                     </div>
 
                     <div class = "facts-item">
-                        <span class = "fas fa-mountain facts-icon"></span>
+                        <span class = "fas fa-map facts-icon"></span>
                         <div class = "facts-info">
-                            <strong>84</strong>
-                            <p class = "text">The fares displayed are however a good estimation of the actual fare.</p>
+                            <p class = "text">The fares currently available are for journeys to and from Kasoa.</p>
                         </div>
                     </div>
 
                     <div class = "facts-item">
-                        <span class = "fas fa-ship facts-icon"></span>
+                        <span class = "fas fa-map-marker-alt facts-icon"></span>
                         <div class = "facts-info">
-                            <strong>120</strong>
                             <p class = "text">Fare information was retrieved from various stations accross Accra</p>
                         </div>
                     </div>
