--- a/about.html
+++ b/about.html
@@ -88,8 +88,8 @@
         <section id = "facts" class = "py-4 flex">
             <div class = "container">
                 <div class = 'title-wrap'>
-                    <span class = "sm-title">know some facts about our agency</span>
-                    <h2 class = "lg-title">Important facts</h2>
+                    <span class = "sm-title">Know some facts about our agency</span>
+                    <h2 class = "lg-title">Disclaimer Notice</h2>
                 </div>
 
                 <div class = "facts-row">
